--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,31 @@
   <title>Parcial 2</title>
 </head>
 <body>
+    <nav class="main-nav">
+        <ul class="main-menu">
+          <li class="main-menu__item">
+            <a href="#" class="main-menu__link">
+              HOME
+            </a></li>
+          <li class="main-menu__item">
+            <a href="#" class="main-menu__link">
+              ABOUT US
+            </a></li>
+          <li class="main-menu__item">
+            <a href="#" class="main-menu__link">
+              CONTACT
+            </a></li>
+          <li class="main-menu__item">
+            <a href="#" class="main-menu__link">
+              PANTS
+            </a></li>
+          <li class="main-menu__item">
+            <a href="#" class="main-menu__link">
+              DRESSES
+            </a></li>
+        </ul>
+      </nav>
   <div id="root"></div>
+  
 </body>
 </html>
