listo sin graidnte

--- a/src/index.html
+++ b/src/index.html
@@ -11,23 +11,9 @@
         <ul class="main-menu">
           <li class="main-menu__item">
             <a href="#" class="main-menu__link">
-              HOME
+              Sign language
             </a></li>
-          <li class="main-menu__item">
-            <a href="#" class="main-menu__link">
-              ABOUT US
-            </a></li>
-          <li class="main-menu__item">
-            <a href="#" class="main-menu__link">
-              CONTACT
-            </a></li>
-          <li class="main-menu__item">
-            <a href="#" class="main-menu__link">
-              PANTS
-            </a></li>
-          <li class="main-menu__item">
-            <a href="#" class="main-menu__link">
-              DRESSES
+          
             </a></li>
         </ul>
       </nav>
