Completo sin gradient

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,23 @@
-<head><link href="index.css" rel="stylesheet"></head><script type="text/javascript" src="index.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Parcial 2</title>
+<link href="index.css" rel="stylesheet"></head>
+<body>
+    <nav class="main-nav">
+        <ul class="main-menu">
+          <li class="main-menu__item">
+            <a href="#" class="main-menu__link">
+              Sign language
+            </a></li>
+          
+            </a></li>
+        </ul>
+      </nav>
+  <div id="root"></div>
+  
+<script type="text/javascript" src="index.js"></script></body>
+</html>
